--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
@@ -30,7 +31,10 @@
     "g": "^2.0.1",
     "mysql2": "^3.4.2",
     "nest-cli": "^0.0.5",
+    "nodemailer": "^6.9.3",
     "passport-jwt": "^4.0.1",
+    "path": "^0.12.7",
+    "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.32.1",
